# test20250615

./: README.md  pyproject.toml
.github/workflows/: publicar-en-pypi.yml
mi-proyecto-genial/src/test20250615/: calculos.py  main.py  ui.py
